# wdk-qt5

./: .gitignore  .gitmodules  .tag  PORTING.md  README  README.md  qt.pro
.github/workflows/: build.yml
cmake/: qt5.cmake
coin/platform_configs/: default.txt  tqtc-qt5.txt
hack/: build-2008-x64-dll.bat  build-2008-x64-lib.bat  build-2008-x86-dll.bat  build-2008-x86-lib.bat  fix-utf8.py  full-2008-x64-dll.bat  full-2008-x86-dll.bat  retry-nmake.bat  unicode_escape.txt  xp-full-2008-x86-dll.bat
hack/wdk-probe/: build-probe.bat  probe.cpp
hack/wdk-qt/: build-all.bat  build-extra-module.bat  build-i18n.bat  build-module.bat  build-qtcharts.bat  build-testapp.bat  clean-build.bat  configure-qtbase.bat  install.bat  patch-static-cmake-deps.py  qtbase-wdk7.patch  test-charts-consume.bat  (+3 more)
hack/wdk-qt/charts-consumer/: CMakeLists.txt  main.cpp
hack/wdk-qt/fetch-test/: CMakeLists.txt
qt3d/: .tag  qt3d.pro  sync.profile
qtactiveqt/: .tag
qtandroidextras/: .tag
qtbase/: .qmake.conf  .tag  configure  header.BSD-NEW  qtbase.pro  sync.profile
qtdoc/: .tag
qtimageformats/: .tag
qtlocation/: .tag  qtlocation.pro
qtmacextras/: .tag
qtmultimedia/: .tag  qtmultimedia.pro  sync.profile
qtquickcontrols2/: .qmake.conf  .tag  README.md  sync.profile
qtscript/: .qmake.conf  .tag
qtserialbus/: .tag  qtserialbus.pro
qtsvg/: .tag
qttools/: .tag
qttranslations/: .tag
qtwayland/: .tag  qtwayland.pro  sync.profile
qtwebchannel/: .tag
qtwebengine/: .qmake.conf  .tag  qtwebengine.pro
qtwebsockets/: .qmake.conf  .tag
qtwebview/: .tag  qtwebview.pro
qtwinextras/: .tag
qtx11extras/: .tag
(+8509 files in other folders)
